log
Fri 12 Aug 2022 01:07:25 PM UTC: 
 exercises.c | 10 ++++++++--
 1 file changed, 8 insertions(+), 2 deletions(-)
 tests:  1|6
total_score: 10/70
bf268ec
Fri 12 Aug 2022 01:11:07 PM UTC: 
 exercises.c | 8 ++++----
 1 file changed, 4 insertions(+), 4 deletions(-)
In file included from test.c:5:
exercises.c: In function ‘sumaNultimos’:
exercises.c:40:20: error: expected expression before ‘)’ token
   40 |   *suma = sumaN(a, );
      |                    ^
Compilation failed
bdb8bc5
